manifests/demoDeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: flaskapp-v1
  name: flaskapp-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp-v1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flaskapp-v1
    spec:
      containers:
      - image: alexmavcouk/blog-app-demo:20230912124351
        name: blogapp
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        resources: {}
status: {}
