manifests/honeycombio.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: honeycomb-agent
  name: honeycomb-agent
  namespace: honeycomb
spec:
  selector:
    matchLabels:
      app: honeycomb-agent
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: honeycomb-agent
    spec:
      tolerations:
        - operator: Exists
          effect: NoSchedule
      containers:
        - env:
            - name: HONEYCOMB_APIKEY
              valueFrom:
                secretKeyRef:
                  key: api-key
                  name: honeycomb
            - name: NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: NODE_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
          image: honeycombio/honeycomb-kubernetes-agent:2.7.1
          imagePullPolicy: IfNotPresent
          name: honeycomb-agent
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - mountPath: "/etc/honeycomb"
              name: config
              readOnly: false
            - mountPath: "/var/log"
              name: varlog
              readOnly: false
            - mountPath: "/var/lib/docker/containers"
              name: varlibdockercontainers
              readOnly: true
      serviceAccountName: honeycomb-serviceaccount
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            items:
              - key: config.yaml
                path: config.yaml
            name: honeycomb-agent-config
          name: config
        - hostPath:
            path: "/var/log"
          name: varlog
        - hostPath:
            path: "/var/lib/docker/containers"
          name: varlibdockercontainers
