manifests/pod-sql.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sqlite
  name: sqlite
spec:
  volumes: 
  - name: my-vol
    persistentVolumeClaim:
      claimName: my-pvc
  containers:
  - image: docker.io/library/sqlite:v1.1
    name: sqlite
    volumeMounts:
    - name: my-vol
      mountPath: /db1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
