manifests/v1deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: flaskapp-v1
  name: flaskapp-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flaskapp-v1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flaskapp-v1
    spec:
      containers:
      - image: docker.io/library/blogapp:20230824223242
        name: blogapp
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 30
        resources: {}
status: {}
