manifests/v2deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: flaskapp-v2
  name: flaskapp-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flaskapp-v2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flaskapp-v2
    spec:
      containers:
      - image: docker.io/library/blogapp:20230824095831
        name: blogapp
        ports:
        - containerPort: 5000
        resources: {}
status: {}
