manifests/svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: flaskapp
  name: flaskapp
spec:
  ports:
  - port: 30500
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskapp-v1
  type: NodePort
status:
  loadBalancer: {}
