manifests/demoManifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: flaskapp-v1
  name: flaskapp-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp-v1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flaskapp-v1
    spec:
      containers:
      - image: alexmavcouk/blog-app-demo:20230912211935
        name: blogapp
        ports:
        - containerPort: 5000
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 120
          periodSeconds: 90
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: flaskapp
  name: flaskapp
spec:
  ports:
  - port: 30500
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskapp-v1
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: blogapp
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: example.local
    http:
      paths:
      - backend:
          service:
            name: flaskapp
            port:
              number: 30500
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
