manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: blogapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: example.local
    http:
      paths:
      - backend:
          service:
            name: flaskapp
            port:
              number: 30500
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
